# src/routes/entrie-route.js
@@ -6,11 +6,15 @@ const router = express.Router();
 const controller = require("../controllers/entrie-controller");
 const authService = require("../services/auth-service");
 
-router.get("/en", authService.authorize, controller.get);
-router.get("/en/:word", authService.authorize, controller.getByWord);
-router.post("/en/:word/favorite", authService.authorize, controller.favorite);
+router.get("/entries/en", authService.authorize, controller.get);
+router.get("/entries/en/:word", authService.authorize, controller.getByWord);
+router.post(
+  "/entries/en/:word/favorite",
+  authService.authorize,
+  controller.favorite
+);
 router.delete(
-  "/en/:word/unfavorite",
+  "/entries/en/:word/unfavorite",
   authService.authorize,
   controller.unfavorite
 );
